syntax = "proto3";

package protobuf;


message Material {
  string url = 1;
  int32 videoLength = 2;
  int32 videoSize = 3;
  int32 width = 4;
  int32 height = 5;
  int32 bitRate = 6;
  int32 iValue = 7;
  string sValue = 8;
  double fValue = 9;
  string resolution = 10;
  string mime = 11;
  string fMd5 = 12;
  int32 orientation = 13;
  int32 protocol = 14;
}